<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FormRegister</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="labelButtonRegister">Register</string>
    <string name="LabelNama">Nama</string>
    <string name="labelUsername">Username</string>
    <string name="labelPassword">Password</string>

</resources>